configs/backend-service.yaml
# A DB service, backed by a MongoDB Pod
# Using a "stateful" service (with a Persistent Volume)

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: amp

spec:
  ports:
  - name: http
    port: 27017
    targetPort: 27017

  selector:
    app: db
