configs/backend.yaml
# A DB service, backed by a MongoDB Pod
# Using a "stateful" service (with a Persistent Volume)
#
# Reachable at URL: mongodb://backend:27017/db_name

apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  ports:
  - name: http
    port: 27017
    targetPort: 27017

  selector:
    app: db


---
# A "stateful" Pod (but NOT a StatefulSet) which
# uses a PVC to back its persistent data.
#
# Re-creating a Pod using this will preserve the
# data that had been written by the previously
# running Pod(s).

apiVersion: v1
kind: Pod
metadata:
    name: mongo
    labels:
      app: db
      rel: "mongo-3.7"

spec:
  containers:
    - image: "mongo:3.7"
      name: mongodb
      ports:
      - containerPort: 27017
        protocol: TCP
      volumeMounts:
      - name: mongo-pvc
        mountPath: /data/db

  volumes:
  - name: mongo-pvc
    persistentVolumeClaim:
      # Here the claimName MUST match the name in the PVC
      claimName: mongodb-pvc
