configs/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: amp

spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https

  selector:
    app: web-server
