configs/frontend-v2.yaml
# Web Server Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: web-frontend
    rel: staging

spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-v2

  template:
    metadata:
      labels:
        app: webapp-v2
    spec:
      volumes:
      - name: config
        configMap:
          name: frontend-config-v2

      containers:
      - image: massenz/simple-flask:0.6.6
        name: webapp
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: "/etc/flask"
          readOnly: true

        resources:
          requests:
            cpu: 100m
            memory: 100Mi

        livenessProbe:
          httpGet:
            path: "/health"
            port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2

spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: webapp-v2
