configs/frontend.yaml
# Web Server Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-cluster
  namespace: amp
  labels:
    app: web-frontend
    rel: staging

spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp

  template:
    metadata:
      labels:
        app: webapp
    spec:
      volumes:
      - name: config
        configMap:
          name: frontend-config

      containers:
      - image: docker.apple.com/amp-sre/simple-flask:0.4.0
        name: webapp
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: "/etc/flask"
          readOnly: true

        resources:
          requests:
            cpu: 100m
            memory: 100Mi

        livenessProbe:
          httpGet:
            path: "/health"
            port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: amp

spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: webapp
