configs/registry.yaml

apiVersion: v1
kind: Pod
metadata:
    name: registry
    labels:
      app: registry

spec:
  containers:
  - image: registry:2
    name: registry
    ports:
    - name: docker
      containerPort: 5000
      protocol: TCP
    resources:
      limits:
        cpu: "0.1"
    volumeMounts:
    - name: repositories
      mountPath: /var/lib/registry

  - image: "hyper/docker-registry-web"
    name: registry-ui
    ports:
    - name: web
      containerPort: 8080
      protocol: TCP
  volumes:
  - name: repositories
    hostPath:
      path: /data/store/registry

---
apiVersion: v1
kind: Service
metadata:
  name: registry

spec:
  type: NodePort
  ports:
  - name: ui
    nodePort: 30500
    port: 5000
    targetPort: docker
  - name: api
    nodePort: 30501
    port: 80
    targetPort: web

  selector:
    app: registry
